@@ -1342,7 +1342,7 @@ public class DocumentBuilder extends ComponentBuilder implements MXMLNamespaces
 		unit.auxGenerateInfo.put( "generateLoaderClass", generateLoaderClass );
 		unit.auxGenerateInfo.put( "windowClass", windowClass );
 		unit.auxGenerateInfo.put( "preloaderClass", document.getPreloader() );
-		unit.auxGenerateInfo.put( specialAttrUsePreloader, new Boolean( document.getUsePreloader() ) );
+		unit.auxGenerateInfo.put( specialAttrUsePreloader, Boolean.valueOf(document.getUsePreloader()));
 		unit.auxGenerateInfo.put( "rootAttributes", rootAttributeMap );
 		unit.auxGenerateInfo.put( "rootAttributeEmbedVars", rootAttributeEmbedVarsMap );
 		unit.auxGenerateInfo.put( "rootAttributeEmbedNames", rootAttributeEmbedNamesMap );
